More test coverage